# firmware

./: CMakeLists.txt
include/: Angle.h  Mount.h  Parameters.h  Server.h
libs/: Angle.cpp  CMakeLists.txt  Mount.cpp  Server.cpp
src/: CMakeLists.txt  main.cpp
